--- a/website/layouts/guides.erb
+++ b/website/layouts/guides.erb
@@ -4,6 +4,9 @@
       <li<%= sidebar_current("guides-writing-custom-terraform-providers") %>>
         <a href="/guides/writing-custom-terraform-providers.html">Writing Custom Providers</a>
       </li>
+      <li<%= sidebar_current("guides-running-terraform-in-automation") %>>
+        <a href="/guides/running-terraform-in-automation.html">Running Terraform in Automation</a>
+      </li>
     </ul>
   <% end %>
 
